--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: dragonchain_sdk
-description: A new Flutter package project.
+description: Dragoncahin Dart SDK
 version: 0.0.1
-author:
-homepage:
+author: The Dragon Company <support@dragonchain.com>
+homepage: https://www.dragonchain.com
+repository: https://github.com/dragonchain/dragonchain-sdk-dart
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -24,7 +25,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # To add assets to your package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
@@ -35,7 +35,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
