--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^0.12.0+2
   crypto: ^2.1.3
   logger: ^0.7.0+2
+  universal_io: ^1.0.1
 
 dev_dependencies:
   flutter_test:
